Always render the video div to avoid layout shifts

--- a/components/tube/player/Player.module.scss
+++ b/components/tube/player/Player.module.scss
@@ -10,9 +10,6 @@
   }
 }
 
-.video {
-}
-
 .fade {
   transition: all 0.2s;
 }
